--- a/FlexTemplate.PresentationLayer/WebServices/Home/NewPlace/Index.cshtml
+++ b/FlexTemplate.PresentationLayer/WebServices/Home/NewPlace/Index.cshtml
@@ -19,7 +19,7 @@
                     </div>
                 </div>-->
                 <div class="submite-list-wrapper">
-                    <form method="post" asp-controller="Home" asp-action="NewPlace" enctype="multipart/form-data" id="new-place-form">
+                    <form method="post" enctype="multipart/form-data" id="new-place-form">
                         <!--Main info-->
                         <div class="row">
                             <div class="col-md-8">
@@ -170,250 +170,152 @@
                             <input id="lng-hidden" type="hidden" name="Longitude" />
                             <h6 class="text-primary text-uppercase mt-15">Opening Hours</h6>
                             <div class="opening-hours-wrapper">
-
                                 <div class="opening-hours-box">
-
                                     <div class="row gap-20">
-
                                         <div class="col-xs-12 col-sm-6 col-md-6">
-
                                             <label class="day-name">Monday</label>
-
                                             <div class="row gap-10">
-
                                                 <div class="col-xs-6 col-sm-6 col-md-6">
-
                                                     <div class="input-group from mb-15">
                                                         <span class="input-group-addon">from</span>
                                                         <input class="oh-timepicker form-control" type="text" name="Opening" id="timepicker_open">
                                                     </div>
-
                                                 </div>
-
                                                 <div class="col-xs-6 col-sm-6 col-md-6">
-
                                                     <div class="input-group to mb-15">
                                                         <span class="input-group-addon">to</span>
                                                         <input class="oh-timepicker form-control" type="text" name="Closing" id="timepicker_close">
                                                     </div>
-
                                                 </div>
-
                                             </div>
-
                                         </div>
-
                                         <div class="col-xs-12 col-sm-6 col-md-6">
-
                                             <label class="day-name">Tuesday</label>
-
                                             <div class="row gap-10">
-
                                                 <div class="col-xs-6 col-sm-6 col-md-6">
-
                                                     <div class="input-group from mb-15">
                                                         <span class="input-group-addon">from</span>
                                                         <input class="oh-timepicker form-control" type="text" name="Opening">
                                                     </div>
-
                                                 </div>
-
                                                 <div class="col-xs-6 col-sm-6 col-md-6">
-
                                                     <div class="input-group to mb-15">
                                                         <span class="input-group-addon">to</span>
                                                         <input class="oh-timepicker form-control" type="text" name="Closing">
                                                     </div>
-
                                                 </div>
-
                                             </div>
-
                                         </div>
-
                                         <div class="col-xs-12 col-sm-6 col-md-6">
-
                                             <label class="day-name">Wednesday</label>
-
                                             <div class="row gap-10">
-
                                                 <div class="col-xs-6 col-sm-6 col-md-6">
-
                                                     <div class="input-group from mb-15">
                                                         <span class="input-group-addon">from</span>
                                                         <input class="oh-timepicker form-control" type="text" name="WednesdayFrom">
                                                     </div>
-
                                                 </div>
-
                                                 <div class="col-xs-6 col-sm-6 col-md-6">
-
                                                     <div class="input-group to mb-15">
                                                         <span class="input-group-addon">to</span>
                                                         <input class="oh-timepicker form-control" type="text" name="WednesdayTo">
                                                     </div>
-
                                                 </div>
-
                                             </div>
-
                                         </div>
-
                                         <div class="col-xs-12 col-sm-6 col-md-6">
-
                                             <label class="day-name">Thursday</label>
-
                                             <div class="row gap-10">
-
                                                 <div class="col-xs-6 col-sm-6 col-md-6">
-
                                                     <div class="input-group from mb-15">
                                                         <span class="input-group-addon">from</span>
                                                         <input class="oh-timepicker form-control" type="text" name="ThurstdayFrom">
                                                     </div>
-
                                                 </div>
-
                                                 <div class="col-xs-6 col-sm-6 col-md-6">
-
                                                     <div class="input-group to mb-15">
                                                         <span class="input-group-addon">to</span>
                                                         <input class="oh-timepicker form-control" type="text" name="ThurstdayTo">
                                                     </div>
-
                                                 </div>
-
                                             </div>
-
                                         </div>
-
                                         <div class="col-xs-12 col-sm-6 col-md-6">
-
                                             <label class="day-name">Friday</label>
-
                                             <div class="row gap-10">
-
                                                 <div class="col-xs-6 col-sm-6 col-md-6">
-
                                                     <div class="input-group from mb-15">
                                                         <span class="input-group-addon">from</span>
                                                         <input class="oh-timepicker form-control" type="text" name="FridayFrom">
                                                     </div>
-
                                                 </div>
-
                                                 <div class="col-xs-6 col-sm-6 col-md-6">
-
                                                     <div class="input-group to mb-15">
                                                         <span class="input-group-addon">to</span>
                                                         <input class="oh-timepicker form-control" type="text" name="FridayTo">
                                                     </div>
-
                                                 </div>
-
                                             </div>
-
                                         </div>
-
                                         <div class="col-xs-12 col-sm-6 col-md-6">
-
                                             <label class="day-name">Saturday</label>
-
                                             <div class="row gap-10">
-
                                                 <div class="col-xs-6 col-sm-6 col-md-6">
-
                                                     <div class="input-group from mb-15">
                                                         <span class="input-group-addon">from</span>
                                                         <input class="oh-timepicker form-control" type="text" name="SaturdayFrom">
                                                     </div>
-
                                                 </div>
-
                                                 <div class="col-xs-6 col-sm-6 col-md-6">
-
                                                     <div class="input-group to mb-15">
                                                         <span class="input-group-addon">to</span>
                                                         <input class="oh-timepicker form-control" type="text" name="SaturdayTo">
                                                     </div>
-
                                                 </div>
-
                                             </div>
-
                                         </div>
-
                                         <div class="col-xs-12 col-sm-6 col-md-6">
-
                                             <label class="day-name">Sunday</label>
-
                                             <div class="row gap-10">
-
                                                 <div class="col-xs-6 col-sm-6 col-md-6">
-
                                                     <div class="input-group from mb-15">
                                                         <span class="input-group-addon">from</span>
                                                         <input class="oh-timepicker form-control" type="text" name="SundayFrom">
                                                     </div>
-
                                                 </div>
-
                                                 <div class="col-xs-6 col-sm-6 col-md-6">
-
                                                     <div class="input-group to mb-15">
                                                         <span class="input-group-addon">to</span> 
                                                         <input class="oh-timepicker form-control" type="text" name="SundayTo">
                                                     </div>
-
                                                 </div>
-
                                             </div>
-
                                         </div>
-
                                     </div>
-
                                 </div>
-
                             </div>
                         </div>
                         <!--End Main info-->
                         <!--Menus-->
                         <div class="row">
-
                             <div class="col-md-8">
-
                                 <div class="section-title-02 mb-20">
-
                                     <h3><span>Menus</span></h3>
-
                                     <p>Get your projects to a new level. Included is animation on view, Parallax block, counters and charts, high resolution graphics etc.</p>
-
                                 </div>
-
                             </div>
-
                         </div>
-
                         <div class="submite-list-box">
-
                             <div class="food-menu-form-wrapper">
-
                                 <h6 class="text-primary text-uppercase">Menu Category #1</h6>
-
                                 <div class="form-group form-group-lg">
-
                                     <input type="text" name="Menus[0].Name" class="form-control" placeholder="Ex: Breakfast" />
-
                                 </div>
-
                                 <div class="food-menu-form-box clearfix">
-
                                     <div class="icon">
                                         <i class="fa fa-cutlery text-primary"></i>
                                         <span class="number-label">1</span>
                                     </div>
-
                                     <div class="image-upload">
                                         <div class="dropzone food-menu-image">
                                             <input name="file" type="file">
@@ -421,22 +323,15 @@
                                             <div class="dz-default dz-message"><span>Click or Drop<br />Images Here<br /><small class="font-italic text-muted font400 mt-5 block">2MB max file</small></span></div>
                                         </div>
                                     </div>
-
                                     <div class="food-memu-form">
-
                                         <div class="row gap-20">
-
                                             <div class="col-xss-12 col-xs-12 col-sm-9">
-
                                                 <div class="form-group">
                                                     <label>Title</label>
                                                     <input type="text" name="Menus[0].Products[0].Name" class="form-control" />
                                                 </div>
-
                                             </div>
-
                                             <div class="col-xss-12 col-xs-12 col-sm-3">
-
                                                 <div class="form-group">
                                                     <label>Price</label>
                                                     <div class="input-group">
@@ -444,34 +339,23 @@
                                                         <span class="input-group-addon">$</span>
                                                     </div>
                                                 </div>
-
                                             </div>
-
                                             <div class="col-xss-12 col-xs-12 col-sm-12">
-
                                                 <div class="form-group">
                                                     <label>Short Description</label>
                                                     <input type="text" name="Menus[0].Products[0].Description" class="form-control" />
                                                 </div>
-
                                             </div>
-
                                         </div>
-
                                     </div>
-
                                 </div>
-
                                 <div class="clearfix mt-15">
                                     <a id="add-product" menu-position="0"><i class="fa fa-plus-circle" aria-hidden="true"></i></a>
                                     <a id="remove-product" menu-position="0"><i class="fa fa-minus-circle" aria-hidden="true"></i></a>
                                     <span class="ml-5 font13 line-12 text-muted font-italic">You can add upto 10 menus</span>
                                 </div>
-
                             </div>
-
                         </div>
-
                         <div class="text-center">
                             <h6 class="text-primary text-uppercase mb-0"><a id="add-menu" menu-position="0"><i class="fa fa-plus font14"></i> Add more menu category</a></h6>
                             <p>You can add upto 10 menu categories</p>
