--- a/FlexTemplate.PresentationLayer/WebServices/Components/NewPlaceMenu/Default.cshtml
+++ b/FlexTemplate.PresentationLayer/WebServices/Components/NewPlaceMenu/Default.cshtml
@@ -1,44 +1,30 @@
-﻿@model FlexTemplate.ViewModels.HomeController.NewPlaceNewMenuViewModel
+﻿@model FlexTemplate.PresentationLayer.WebServices.Components.NewPlaceMenu.ViewModel
 <div class="food-menu-form-wrapper">
-
-    <h6 class="text-primary text-uppercase">Menu Category #@(Model.Position + 1)<a id="remove-menu" class="pull-right"><i class="fa fa-minus-circle"></i></a></h6>
-
+    <h6 class="text-primary text-uppercase">Menu Category #@Model.Name<a id="remove-menu" class="pull-right"><i class="fa fa-minus-circle"></i></a></h6>
     <div class="form-group form-group-lg">
-
         <input type="text" name="Menus[@Model.Position].Name" class="form-control" placeholder="Ex: Breakfast" />
-            
     </div>
-
     <div class="food-menu-form-box clearfix">
-
         <div class="icon">
             <i class="fa fa-cutlery text-primary"></i>
             <span class="number-label">1</span>
         </div>
-
         <div class="image-upload">
             <div class="dropzone food-menu-image">
-                <input class="file_descriptor" type="hidden" name="Menus[@Model.Position].Products[0].Guid" value="@Guid.NewGuid()"/>
+                <input class="file_descriptor" type="hidden" name="Menus[@Model.Position].Products[0].Guid" value="@Model.Guid"/>
                 <input name="file" type="file">
                 <div class="dz-default dz-message"><span>Click or Drop<br />Images Here<br /><small class="font-italic text-muted font400 mt-5 block">2MB max file</small></span></div>
             </div>
         </div>
-
         <div class="food-memu-form">
-
             <div class="row gap-20">
-
                 <div class="col-xss-12 col-xs-12 col-sm-9">
-
                     <div class="form-group">
                         <label>Title</label>
                         <input type="text" name="Menus[@Model.Position].Products[0].Name" class="form-control" />
                     </div>
-
                 </div>
-
                 <div class="col-xss-12 col-xs-12 col-sm-3">
-
                     <div class="form-group">
                         <label>Price</label>
                         <div class="input-group">
@@ -46,24 +32,16 @@
                             <span class="input-group-addon">$</span>
                         </div>
                     </div>
-
                 </div>
-
                 <div class="col-xss-12 col-xs-12 col-sm-12">
-
                     <div class="form-group">
                         <label>Short Description</label>
                         <input type="text" name="Menus[@Model.Position].Products[0].Description" class="form-control" />
                     </div>
-
                 </div>
-
             </div>
-
         </div>
-
     </div>
-
     <div class="clearfix mt-15">
         <a id="add-product" menu-position="@Model.Position"><i class="fa fa-plus-circle" aria-hidden="true"></i></a>
         <a id="remove-product" menu-position="@Model.Position"><i class="fa fa-minus-circle" aria-hidden="true"></i></a>
