--- a/FlexTemplate.PresentationLayer/WebServices/Components/NewPlaceProduct/Default.cshtml
+++ b/FlexTemplate.PresentationLayer/WebServices/Components/NewPlaceProduct/Default.cshtml
@@ -1,34 +1,25 @@
-﻿@model FlexTemplate.ViewModels.HomeController.NewPlaceNewProductViewModel
+﻿@model FlexTemplate.PresentationLayer.WebServices.Components.NewPlaceProduct.ViewModel
 <div class="food-menu-form-box clearfix">
-
     <div class="icon">
         <i class="fa fa-cutlery text-primary"></i>
-        <span class="number-label">@(Model.Position + 1)</span>
+        <span class="number-label">@Model.Name</span>
     </div>
-
     <div class="image-upload">
         <div class="dropzone food-menu-image">
             <input name="file" type="file">
-            <input class="file_descriptor" type="hidden" name="Menus[@Model.Menu].Products[@Model.Position].Guid" value="@Guid.NewGuid().ToString()"/>
+            <input class="file_descriptor" type="hidden" name="Menus[@Model.Menu].Products[@Model.Position].Guid" value="@Model.Guid"/>
             <div class="dz-default dz-message"><span>Click or Drop<br />Images Here<br /><small class="font-italic text-muted font400 mt-5 block">2MB max file</small></span></div>
         </div>
     </div>
-
     <div class="food-memu-form">
-
         <div class="row gap-20">
-
             <div class="col-xss-12 col-xs-12 col-sm-9">
-
                 <div class="form-group">
                     <label>Title</label>
                     <input type="text" name="Menus[@Model.Menu].Products[@Model.Position].Name" class="form-control" />
                 </div>
-
             </div>
-
             <div class="col-xss-12 col-xs-12 col-sm-3">
-
                 <div class="form-group">
                     <label>Price</label>
                     <div class="input-group">
@@ -36,20 +27,13 @@
                         <span class="input-group-addon">$</span>
                     </div>
                 </div>
-
             </div>
-
             <div class="col-xss-12 col-xs-12 col-sm-12">
-
                 <div class="form-group">
                     <label>Short Description</label>
                     <input type="text" name="Menus[@Model.Menu].Products[@Model.Position].Description" class="form-control" />
                 </div>
-
             </div>
-
         </div>
-
     </div>
-
 </div>
