--- a/FlexTemplate.PresentationLayer/WebServices/_Layout.cshtml
+++ b/FlexTemplate.PresentationLayer/WebServices/_Layout.cshtml
@@ -289,7 +289,7 @@
             asp-fallback-test="window.jQuery && window.jQuery.validator && window.jQuery.validator.unobtrusive">
     </script>
 
-    <script type="text/javascript" src="~/ckeditor/ckeditor.js"></script>
+    <!--<script type="text/javascript" src="~/ckeditor/ckeditor.js"></script>-->
 
 <!-- JS for only submission page -->
 <script type="text/javascript" src="~/js/bootstrap3-wysihtml5.min.js"></script>
