--- a/FlexTemplate.PresentationLayer/WebServices/Home/NewBlog/Index.cshtml
+++ b/FlexTemplate.PresentationLayer/WebServices/Home/NewBlog/Index.cshtml
@@ -36,7 +36,7 @@
                                 </div>
                             </div>
                         </div>
-                        <input type="hidden" name="Guid" value="@Model.NewBlogGuid" />
+                        <input type="hidden" name="BannersKey" value="@Model.NewBlogGuid" />
                         <input type="submit" class="btn btn-primary mt-15" value="Відправити" />
                     </form>
                 </div>
