--- a/FlexTemplate.PresentationLayer/WebServices/Home/NewPlace/Index.cshtml
+++ b/FlexTemplate.PresentationLayer/WebServices/Home/NewPlace/Index.cshtml
@@ -383,16 +383,16 @@
                             </div>
                             <div id="new-place" class="dropzone">
                                 <input name="files" type="file" multiple>
-                                <input class="file_descriptor" type="hidden" name="uid" value="@Model.NewPlaceGuid" />
+                                <input class="file_descriptor" type="hidden" name="BlobKey" value="@Model.NewPlaceGuid" />
                                 <div class="dz-default dz-message"><span>Фотографії галереї</span></div>
                             </div>
                         </div>
                         <!--End Фотографії-->
                         <!--Submit-->
                         <!--<div class="checkbox-block font-icon-checkbox">
-        <input id="term_accept-1" name="TermAccept" type="checkbox" class="required checkbox" />
-        <label class="" for="term_accept-1">Am terminated it excellence invitation projection as. She graceful shy believed distance use nay. Lively is people so basket ladies window expect. <a href="#" class="font700">Terms &amp; Conditions</a></label>
-        </div>-->
+                        <input id="term_accept-1" name="TermAccept" type="checkbox" class="required checkbox" />
+                        <label class="" for="term_accept-1">Am terminated it excellence invitation projection as. She graceful shy believed distance use nay. Lively is people so basket ladies window expect. <a href="#" class="font700">Terms &amp; Conditions</a></label>
+                        </div>-->
                         <input type="submit" class="btn btn-primary mt-15" value="Відправити" />
                         <!--End Submit-->
                     </form>
