--- a/FlexTemplate.PresentationLayer/WebServices/Home/EditBlog/Index.cshtml
+++ b/FlexTemplate.PresentationLayer/WebServices/Home/EditBlog/Index.cshtml
@@ -34,7 +34,7 @@
                         <div class="submite-list-box">
                             <div id="blog-head-update" class="dropzone">
                                 <input type="file">
-                                <input class="file_descriptor" type="hidden" value="@Model.Id" />
+                                <input class="file_descriptor" type="hidden" value="@Model.BlobKey" />
                                 <div class="dz-default dz-message"><span>Головна фотографія</span></div>
                             </div>
                         </div>
