--- a/FlexTemplate.PresentationLayer/WebServices/Home/NewBlog/Index.cshtml
+++ b/FlexTemplate.PresentationLayer/WebServices/Home/NewBlog/Index.cshtml
@@ -30,6 +30,20 @@
                                 </div>
                                 <div class="col-xs-12 col-sm-12">
                                     <div class="form-group">
+                                        <label class="block">Категорії</label>
+                                        @foreach (var category in Model.Categories)
+                                        {
+                                            <div class="col-xs-12 col-sm-2">
+                                                <div class="checkbox-block font-icon-checkbox">
+                                                    <input id="filter_cuisine-@category.Id" type="checkbox" class="checkbox" name="Categories[]" value="@category.Id" />
+                                                    <label for="filter_cuisine-@category.Id">@category.Name</label>
+                                                </div>
+                                            </div>
+                                        }
+                                    </div>                                    
+                                </div>
+                                <div class="col-xs-12 col-sm-12">
+                                    <div class="form-group">
                                         <label>Теги:</label>
                                         <input type="text" class="form-control" id="autocompleteTagging" value="" name="Tags" placeholder="Теги.." />
                                     </div>
