--- a/FlexTemplate.PresentationLayer/wwwroot/css/main.css
+++ b/FlexTemplate.PresentationLayer/wwwroot/css/main.css
@@ -4576,6 +4576,12 @@ a.link-alt:hover {
 .GridLex-gap-50.no-mb > div > div > div {
     margin-bottom: 0;
 }
+
+.modal-dialog-fix{
+    width: auto !important;
+    height: auto !important;
+    margin: 0 auto !important;
+} 
 @media only screen and (max-width: 1199px) {
     .GridLex-gap-20-mdd {
         margin-left: -10px;
