--- a/FlexTemplate.PresentationLayer/WebServices/Home/Blogs/Index.cshtml
+++ b/FlexTemplate.PresentationLayer/WebServices/Home/Blogs/Index.cshtml
@@ -22,11 +22,10 @@
                                             <div class="image">
                                                 <div class="overlay-box">
                                                     <a asp-controller="Home" asp-action="Blog" asp-route-id="@blog.Id">
-                                                        <div class="hero hero-breadcrumb" style="background-image: url('@blog.HeadPhotoPath'); min-height: 450px;">
+                                                        <div class="hero hero-breadcrumb" style="background-image: url('@blog.HeadPhotoPath'), url('../../Resources/Defaults/blog.jpg'); min-height: 450px;">
                                                             <div class="container">
                                                             </div>
-                                                        </div>
-                                                        
+                                                        </div>                                                        
                                                         <div class="image-overlay">
                                                             <div class="overlay-content">
                                                                 <div class="overlay-icon"><i class="pe-7s-link"></i></div>
