[MOD] New Entities architecture

--- a/FlexTemplate.PresentationLayer/WebServices/Home/NewPlace/Index.cshtml
+++ b/FlexTemplate.PresentationLayer/WebServices/Home/NewPlace/Index.cshtml
@@ -379,7 +379,7 @@
                                 <input class="file_descriptor" type="hidden" value="@Model.NewPlaceGuid" />
                                 <div class="dz-default dz-message"><span>Баннер</span></div>
                             </div>
-                            <div id="new-place" class="dropzone">
+                            <div id="place-gallery-update" class="dropzone">
                                 <input name="files" type="file" multiple>
                                 <input class="file_descriptor" type="hidden" name="BlobKey" value="@Model.NewPlaceGuid" />
                                 <div class="dz-default dz-message"><span>Фотографії галереї</span></div>
