--- a/FlexTemplate.PresentationLayer/wwwroot/css/style.css
+++ b/FlexTemplate.PresentationLayer/wwwroot/css/style.css
@@ -487,7 +487,7 @@ ul.navbar-nav {} ul.navbar-nav li {} .navbar-collapse.pull-left .navbar-nav {
     width: 100%;
     height: 100%;
     content: "";
-    background: rgba(0, 0, 0, 0.4);
+    /*background: rgba(0, 0, 0, 0.4);*/
 }
 .hero.stellar-parallax-bg {
     background-position: bottom center;
