--- a/FlexTemplate.PresentationLayer/WebServices/Components/PlaceMenu/Default.cshtml
+++ b/FlexTemplate.PresentationLayer/WebServices/Components/PlaceMenu/Default.cshtml
@@ -1,4 +1,5 @@
 ﻿@model FlexTemplate.PresentationLayer.WebServices.Components.PlaceMenu.ViewModel
+@using System.Linq;
 @if (Model != null && Model.Menus != null && Model.Menus.Any())
 {
     <div id="detail-content-sticky-nav-01" class="detail-content-section clearfix">
